# anything-to-podcast

./: .gitignore  CLAUDE.md  README.md  batch_urls.txt  config.example.yaml  main.py  manage.sh  publish.sh  pyproject.toml  server.py
docs/: episodes.json  feed.xml
feed/: rss_generator.py
fetchers/: __init__.py  arxiv_fetcher.py  base.py  pdf_fetcher.py  reddit_fetcher.py  twitter_fetcher.py
notion/: writer.py
processor/: prompts.py  script_generator.py
prompt_variants/: v1_学术严谨.md  v2_结构化深度解析.md  v3_实验详解.md
storage/: oss_uploader.py
tts/: edge_tts_engine.py  text_preprocessor.py
